feat(validation): Added validation and password * Added password for new user creation   * Will hash on server and client   * TODO: Accept password and compare on login * Added better validation * TODO: Fix the tests
